--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,3 +1,18 @@
-<p>
-  signup works!
-</p>
+<form [ngClass]="{'has-error': error}" novalidate>
+  <div class="form-signup field" [ngClass]="{'has-error': error}">
+    <label>Name</label>
+    <input type="text" [(ngModel)]="user.name" name="name" required/>
+  </div>
+  <div class="form-signup field" [ngClass]="{'has-error': error}">
+    <label>Username</label>
+    <input type="text" [(ngModel)]="user.username" name="username" required/>
+  </div>
+  <div class="form-signup field" [ngClass]="{'has-error': error}">
+    <label>Password</label>
+    <input type="password" [(ngModel)]="user.password" name="password" required/>
+  </div>
+  <div class="form-signup actions">
+    <button (click)="signup()">signup</button>
+    <p *ngIf="error" class="error">{{error}}</p>
+  </div>
+</form>
