--- a/src/app/pages/page-settings/page-settings.component.html
+++ b/src/app/pages/page-settings/page-settings.component.html
@@ -1,5 +1,5 @@
 <p>
   page-settings works!
 </p>
-<app-child-list></app-child-list>
+<app-child-list [children]="children"></app-child-list>
 <app-child-add-form></app-child-add-form>
