--- a/src/app/components/child-add-form/child-add-form.component.html
+++ b/src/app/components/child-add-form/child-add-form.component.html
@@ -1,3 +1,18 @@
-<p>
-  child-add-form works!
-</p>
+<form [ngClass]="{'has-error': error}" novalidate>
+  <div class="form-signup field" [ngClass]="{'has-error': error}">
+    <label>Name</label>
+    <input type="text" [(ngModel)]="child.name" name="name" required/>
+  </div>
+  <div class="form-signup field" [ngClass]="{'has-error': error}">
+    <label>Username</label>
+    <input type="text" [(ngModel)]="child.username" name="username" required/>
+  </div>
+  <div class="form-signup field" [ngClass]="{'has-error': error}">
+    <label>Password</label>
+    <input type="password" [(ngModel)]="child.password" name="password" required/>
+  </div>
+  <div class="form-signup actions">
+    <button (click)="addChild()">Add Child</button>
+    <p *ngIf="error" class="error">{{error}}</p>
+  </div>
+</form>
