--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <h1>
-    Fuuuu
+    <a [routerLink]="['/main']">Fuuuu</a>
   </h1>
   <div [ngClass]="{'is-user': user, 'is-anon': anon}">
     <div *ngIf="loading">
