--- a/src/app/components/child-list/child-list.component.html
+++ b/src/app/components/child-list/child-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  {{children | json}}
-</p>
+<!-- {{children | json}} -->
+<div *ngFor="let child of user[0].children">
+  <div>
+    {{child.name}}
+  </div>
+</div>
