--- a/src/app/pages/page-main/page-main.component.html
+++ b/src/app/pages/page-main/page-main.component.html
@@ -1,6 +1,15 @@
 <p>
   page-main works!
 </p>
+<div class="menu">
+  <p>
+    menu
+  </p>
+  <div class="menu-item">
+    <a routerLink='/settings'>Settings</a>
+  </div>
+</div>
+<hr>
 <p>Hola {{user.name}}</p>
 <div class="main-forms">
   <div class="main-search">
