--- a/src/app/pages/page-advice-new/page-advice-new.component.html
+++ b/src/app/pages/page-advice-new/page-advice-new.component.html
@@ -17,7 +17,8 @@
     </div>
     <ng-container *ngIf="user[0].children">
       <div *ngFor="let child of user[0].children" class="field children">
-        <input type="checkbox" name={{child.name}} value={{child._id}}>{{child.name}}
+        <input type="radio" name={{child.name}} id={{child.name}} value={{child._id}}/>
+        <label for={{child.name}}>{{child.name}}</label>
       </div>
     </ng-container>
     <div>
