--- a/src/app/components/advice-list/advice-list.component.html
+++ b/src/app/components/advice-list/advice-list.component.html
@@ -1,3 +1,8 @@
 <p>
   advice-list works!
 </p>
+<div *ngFor="let advice of advices">
+  <div>
+    {{advice | json}} {{advice.title}}
+  </div>
+</div>
