advice list working

--- a/src/app/components/advice-item/advice-item.component.html
+++ b/src/app/components/advice-item/advice-item.component.html
@@ -1,1 +1,11 @@
-
+<div>
+  {{advice.title}}
+</div>
+<div class="favorite">
+  <p *ngIf="advice.favorite" (click)="handleClick()">
+    Favorite
+  </p>
+  <p *ngIf="!advice.favorite" (click)="handleClick()">
+    No Favorite
+  </p>
+</div>
