--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <header>
-  <h1>
-    <div class="header-icon">
-      <img [routerLink]="['/main']" src="../assets/img/senora-resize.png">
-    </div>
-  </h1>
+  <div class="header-icon">
+    <img [routerLink]="['/main']" src="../assets/img/senora-resize.png">
+  </div>
+  <app-alerts></app-alerts>
 </header>
 
 <div [ngClass]="{'is-user': user, 'is-anon': anon}">
