--- a/src/app/pages/page-child/page-child.component.html
+++ b/src/app/pages/page-child/page-child.component.html
@@ -7,4 +7,4 @@
   </div>
 </ng-container>
 
-<app-advice-list [advices]="advices"></app-advice-list>
+<app-advice-list [advices]="advices" (onChangeAdvice)="handleOnChange($event)"></app-advice-list>
