--- a/src/app/pages/page-main/page-main.component.html
+++ b/src/app/pages/page-main/page-main.component.html
@@ -1,6 +1,17 @@
-<p>Hola {{userArray[0].name}}</p>
-
 <ng-container *ngIf="userArray[0].role === 'parent'">
+  <p>
+    Hola {{userArray[0].name}}
+  </p>
+  <header>
+    <div class="header-icon">
+      <img [routerLink]="['/main']" src="../assets/img/senora-resize.png">
+    </div>
+    <div class="form-logout actions">
+      <a (click)="logout()">Log Out</a>
+      <p *ngIf="error" class="error">{{error}}</p>
+    </div>
+  </header>
+
   <div class="menu">
     <p>
       menu
@@ -21,14 +32,14 @@
   </div>
   <hr>
   <div class="main-forms">
-    <div class="main-search">
+    <!-- <div class="main-search">
       <form (ngSubmit)="submitForm(myForm)" #myForm="ngForm">
-        <div class="field search">
-          <label>search</label>
-          <input type="text" name="search" />
-        </div>
-      </form>
-    </div>
+        <div class="field search"> -->
+    <!-- <label>search</label> -->
+    <!-- <input type="text" name="search" />
+  </div>
+  </form> -->
+    <!-- </div> -->
     <div class="main-quick-advice">
       <form (ngSubmit)="submitForm(myForm)" #myForm="ngForm">
         <div class="field quick-advice">
@@ -41,17 +52,21 @@
       <a [routerLink]="['/advice-new']">new advice</a>
     </div>
   </div>
-  <hr>
-
+  <hr> {{advices|json}}
   <div class="favs-list" *ngFor="let child of userArray[0].children ">
     <p>{{child.name}}</p>
     <app-advice-list [advices]="advices"></app-advice-list>
 
   </div>
-
+  <app-messages></app-messages>
 </ng-container>
 <ng-container *ngIf="userArray[0].role === 'child'">
+  <p>
+    Hola {{userArray[0].name}}
+  </p>
   <div class="alert">
+    <app-messages [user]="userArray[0]"></app-messages>
 
   </div>
+
 </ng-container>
