super sprint and fixing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
+<header>
+  <div class="header-icon">
+    <img [routerLink]="['/main']" src="../assets/img/senora-resize.png">
+  </div>
+
+</header>
+
+
 <div [ngClass]="{'is-user': user, 'is-anon': anon}">
   <div *ngIf="loading">
-    <div class="username text">
-      <img src="../assets/img/senora-resize.png" />
-      <p> Loading...</p>
-    </div>
+
+    <img src="../assets/img/senora-resize.png" />
+    <p> Loading...</p>
+
   </div>
 </div>
 <div style="text-align:center">
