--- a/src/app/pages/page-child/page-child.component.html
+++ b/src/app/pages/page-child/page-child.component.html
@@ -1,7 +1,4 @@
-<p>
-  page-child works!
-</p>
-<ng-container *ngIf="userData">
+<ng-container class="child-component" *ngIf="userData">
   <div>
     {{userData.name}}
   </div>
