--- a/src/app/pages/page-settings/page-settings.component.html
+++ b/src/app/pages/page-settings/page-settings.component.html
@@ -1,5 +1,7 @@
 <p>
   page-settings works!
 </p>
-<app-child-list [user]="user"></app-child-list>
-<app-child-add-form></app-child-add-form>
+<ng-container *ngIf="user">
+  <app-child-list [user]="user" (onDelete)="handleDelete($event)"></app-child-list>
+  <app-child-add-form (onCreate)="handleCreate()"></app-child-add-form>
+</ng-container>
