--- a/src/app/pages/page-main/page-main.component.css
+++ b/src/app/pages/page-main/page-main.component.css
@@ -1,14 +1,4 @@
-header {
+.main-container {
   display: flex;
-  justify-content: center;
-}
-
-.header-icon {
-  width: 100px;
-  height: 100px;
-}
-
-.header-icon img {
-  width: 100px;
-  height: 100px;
+  direction: row;
 }
