--- a/src/app/pages/page-advice-new/page-advice-new.component.html
+++ b/src/app/pages/page-advice-new/page-advice-new.component.html
@@ -1,6 +1,3 @@
-<p>
-  page-advice-new works!
-</p>
 <div class="new-advice">
   <form #myForm="ngForm">
     <div class="field title">
@@ -19,7 +16,7 @@
       <div *ngFor="let child of user[0].children" class="field children">
         <!-- it is always posting same id !!!!!!!!!-->
         <input type="radio" name="childId" id="{{child.name}}" [(ngModel)]="advice.childId" value="{{child._id}}">
-        <label for="{{child.name}}">{{child.name}}{{child._id}}</label>
+        <label for="{{child.name}}">{{child.name}}</label>
       </div>
     </ng-container>
     <div>
