--- a/src/app/pages/page-main/page-main.component.css
+++ b/src/app/pages/page-main/page-main.component.css
@@ -1,4 +1,42 @@
 .main-container {
   display: flex;
-  direction: row;
+  direction: column;
+  justify-content: center
+}
+
+.menu {
+  float: left;
+  position: absolute;
+  padding: 10px;
+}
+
+.wall-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-new-advice {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: rgba(48, 49, 62, 0.5);
+  margin: 5%;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.children {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: rgba(48, 49, 62, 0.5);
+  margin: 5%;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+h1 {
+  font-size: 20 px;
 }
