--- a/src/app/components/child-list/child-list.component.html
+++ b/src/app/components/child-list/child-list.component.html
@@ -1,9 +1,9 @@
 <!-- {{children | json}} -->
 <ng-container *ngIf="user[0].children">
-  <div *ngFor="let child of user[0].children">
+  <div class="child-container" *ngFor="let child of user[0].children">
     <div>
       {{child.name}}
     </div>
-    <button (click)="handleClick(child)"> X </button>
+    <a (click)="handleClick(child)"> X </a>
   </div>
 </ng-container>
