--- a/src/styles.css
+++ b/src/styles.css
@@ -48,3 +48,15 @@ h1 {
   height: 30px;
   width: 30px;
 }
+
+.loader {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.loader img {
+  width: 300px;
+  height: 300px;
+}
