--- a/src/app/pages/page-auth/page-auth.component.html
+++ b/src/app/pages/page-auth/page-auth.component.html
@@ -1,2 +1,4 @@
-<app-login></app-login>
-<app-signup></app-signup>
+<section class="wrapper">
+    <app-login class="section-like"></app-login>
+    <app-signup class="section-like"></app-signup>
+</section>
