--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,44 @@
-header {
+.header-like {
+  padding-top: 10px;
+  
   display: flex;
   justify-content: center;
+
+  margin-bottom: 50px;
+
+}
+
+.header-container::before,
+.header-container::after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background-color: #fff;
+  top: 60px;
+  width: 50%;
+  z-index: -9;
+}
+
+.header-container::before {
+  left: 0;
+}
+
+.header-container::after {
+  right: 0;
 }
 
 .header-icon {
-  width: 100px;
-  height: 100px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+
+  background-color: #254263;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .header-icon img {
   width: 100px;
-  height: 100px;
 }
