--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<header>
-  <div class="header-icon">
-    <img [routerLink]="['/main']" src="../assets/img/senora-resize.png">
+<header class="header-like">
+  <div class="header-container">
+    <div class="header-icon">
+      <img [routerLink]="['/main']" src="../assets/img/senora-resize.png">
+    </div>
   </div>
-
 </header>
 
 
