--- a/src/app/components/child-add-form/child-add-form.component.html
+++ b/src/app/components/child-add-form/child-add-form.component.html
@@ -1,17 +1,14 @@
 <form [ngClass]="{'has-error': error}" novalidate>
-  <div class="form-signup field" [ngClass]="{'has-error': error}">
-    <label>Name</label>
-    <input type="text" [(ngModel)]="child.name" name="name" required/>
+  <div class="form field" [ngClass]="{'has-error': error}">
+    <input type="text" [(ngModel)]="child.name" name="name" placeholder="name" required/>
   </div>
-  <div class="form-signup field" [ngClass]="{'has-error': error}">
-    <label>Username</label>
-    <input type="text" [(ngModel)]="child.username" name="username" required/>
+  <div class="form field" [ngClass]="{'has-error': error}">
+    <input type="text" [(ngModel)]="child.username" name="username" placeholder="username"required/>
   </div>
-  <div class="form-signup field" [ngClass]="{'has-error': error}">
-    <label>Password</label>
-    <input type="password" [(ngModel)]="child.password" name="password" required/>
+  <div class="form field" [ngClass]="{'has-error': error}">
+    <input type="password" [(ngModel)]="child.password" name="password" placeholder="password"required/>
   </div>
-  <div class="form-signup actions">
+  <div class="form actions">
     <button (click)="addChild()">Add Child</button>
     <p *ngIf="error" class="error">{{error}}</p>
   </div>
