--- a/src/app/pages/page-advice-new/page-advice-new.component.html
+++ b/src/app/pages/page-advice-new/page-advice-new.component.html
@@ -1,16 +1,13 @@
 <div class="new-advice">
   <form #myForm="ngForm">
-    <div class="field title">
-      <label>title</label>
-      <input type="text" name="title" [(ngModel)]="advice.title" />
+    <div class="form field">
+      <input type="text" name="title" [(ngModel)]="advice.title" placeholder="title"/>
     </div>
-    <div class="field voice">
-      <label>voice</label>
-      <input type="text" name="voice" [(ngModel)]="advice.voice" />
+    <div class="form field">
+      <input type="text" name="voice" [(ngModel)]="advice.voice" placeholder="voice"/>
     </div>
-    <div class="field text">
-      <label>text</label>
-      <input type="text" name="text" [(ngModel)]="advice.text" />
+    <div class="form field">
+      <input type="text" name="text" [(ngModel)]="advice.text" placeholder="text"/>
     </div>
     <ng-container *ngIf="user[0]">
       <div *ngFor="let child of user[0].children" class="field children">
@@ -19,7 +16,7 @@
         <label for="{{child.name}}">{{child.name}}</label>
       </div>
     </ng-container>
-    <div>
+    <div class="form actions">
       <button (click)="createAdvice(); myForm.reset()">submit</button>
     </div>
   </form>
