--- a/src/app/pages/page-main/page-main.component.html
+++ b/src/app/pages/page-main/page-main.component.html
@@ -1,8 +1,7 @@
 <ng-container *ngIf="userArray[0].role === 'child'">
-  <h1>
+  <h3>
     Hola {{userArray[0].name}}
-  </h1>
-  <hr>
+  </h3>
 
   <div class="alert">
 
@@ -18,14 +17,13 @@
 
 
 <ng-container *ngIf="userArray[0].role === 'parent'">
-  <h1>
+  <h3>
     Hola {{userArray[0].name}}
-  </h1>
-  <hr>
+  </h3>
   <div class="menu">
-    <h1>
+    <h2>
       Menu
-    </h1>
+    </h2>
     <div class="logout actions">
       <a (click)="logout()">Log Out</a>
       <p *ngIf="error" class="error">{{error}}</p>
@@ -34,7 +32,7 @@
       <a routerLink='/settings'>Settings</a>
     </div>
   </div>
-  <section class="main-container">
+  <section class="container">
 
     <!-- <div class="main-forms">
 main
@@ -61,9 +59,9 @@ main
         <a [routerLink]="['/advice-new']">new advice</a>
       </div>
       <div class="children">
-        <h1>
+        <h2>
           My Children
-        </h1>
+        </h2>
         <ng-container *ngIf="userArray[0]">
           <div class='child-list' *ngFor="let child of userArray[0].children">
             <a routerLink='/child/{{child._id}}'>{{child.name}}</a>
@@ -75,9 +73,8 @@ main
   </section>
 
 
-  <hr>
   <div class="favs-list" *ngFor="let child of children ">
-    <h1>{{child.name}}</h1>
+    <h2>{{child.name}}</h2>
     <app-advice-list [advices]="child.advices"></app-advice-list>
 
   </div>
